# FastAPI

./: README.md  model.joblib  requirements.txt
fastapi-crud/: README.md  docker-compose.yml  pyproject.toml
fastapi-crud/src/: Dockerfile  requirements.txt
fastapi-crud/src/app/: db.py  main.py
fastapi-crud/src/app/api/: crud.py  models.py  notes.py  root.py
fastapi-crud/src/tests/: conftest.py  test_main.py  test_notes.py
fastapi-jwt/: pyproject.toml  requirements.txt
fastapi-jwt/app/: api.py  model.py
fastapi-jwt/app/auth/: auth_bearer.py  auth_handler.py
music/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
music/src/: .dockerignore  alembic.ini  db.py  main.py  models.py  requirements.txt
music/src/migrations/: env.py
railway/: main.py  models.py
user_guide/: main.py  pyproject.toml  requirements.txt
