[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["Ayodeji Yekeen <ayodejiyou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.0"
uvicorn = "0.26.0"
httpx = "^0.26.0"
pytest = "^7.4.4"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.14"
nanoid = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
