[tool.poetry]
name = "fastapi-jwt"
version = "0.1.0"
description = ""
authors = ["Ayodeji Yekeen <ayodejiyou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pyjwt = "^2.8.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
