[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["Ayodeji Yekeen <ayodejiyou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
